--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask>=2.3.3
-Flask-CORS>=3.0.10
-pandas>=2.1.1
-scikit-learn>=1.3.1
-gunicorn>=21.2.0
+Flask==2.3.2
+pandas==1.6.0
+scikit-learn==1.2.1
+gunicorn==20.1.0  # Web server for production deployment
