--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,10 @@
-# Exported from Render on 2024-12-09T21:11:29Z
 services:
-- type: web
-  name: wherenext
-  runtime: node
-  repo: https://github.com/juliakirk/senior-capstone
-  plan: free
-  region: oregon
-  buildCommand: yarn
-  startCommand: yarn start
-version: "1"
+  - type: web
+    name: wherenext
+    env: python
+    plan: free
+    buildCommand: ""
+    startCommand: gunicorn app:app
+    envVars:
+      - key: FLASK_ENV
+        value: production
