--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.2
 pandas==2.2.3
 scikit-learn==1.2.1
-gunicorn==20.1.0  # Web server for production deployment
+gunicorn==20.1.0
 numpy==1.24.3
-scikit-learn==1.2.1
+
+
